--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.0.24",
+    "chalk": "^4.1.0",
     "cross-env": "^7.0.2",
     "eslint": "7.2.0",
     "nodemon": "^2.0.4",
