Install as gllobal package

--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "./build/index.js",
+  "bin": {
+    "medman": "./build/index.js"
+  },
   "scripts": {
-    "medman": "node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "cross-env NODE_ENV=development nodemon --watch src --delay 1 --exec 'ts-node' src/index.ts"
   },
