--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "prepublish": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --silent ./src/"
   },
   "keywords": [],
   "repository": "https://github.com/mttchpmn/medman-cli.git",
@@ -16,13 +16,18 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.0.24",
+    "@types/rimraf": "^3.0.0",
     "chalk": "^4.1.0",
     "commander": "^6.0.0",
+    "ffprobe": "^1.1.0",
+    "ffprobe-static": "^3.0.0",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.1.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
+    "@types/jest": "^26.0.7",
     "eslint": "7.2.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -30,6 +35,8 @@
     "eslint-plugin-jsx-a11y": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "4.0.0"
+    "eslint-plugin-react-hooks": "4.0.0",
+    "jest": "^26.1.0",
+    "nodemon": "^2.0.4"
   }
 }
