--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "prepublish": "tsc",
-    "test": "jest --silent ./src/"
+    "test": "jest ./src/test"
   },
   "keywords": [],
   "repository": "https://github.com/mttchpmn/medman-cli.git",
@@ -16,18 +16,16 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.0.24",
-    "@types/rimraf": "^3.0.0",
     "chalk": "^4.1.0",
     "commander": "^6.0.0",
     "ffprobe": "^1.1.0",
     "ffprobe-static": "^3.0.0",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.1.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@types/jest": "^26.0.7",
+    "ts-jest": "^26.1.4",
     "eslint": "7.2.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "^6.11.0",
