--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "medman",
-  "version": "2.0.1",
-  "description": "CLI media manager for renaming tv series on remote media servers.",
+  "version": "2.0.2",
+  "description": "CLI media manager for remote media servers.",
   "main": "index.ts",
   "bin": {
     "medman": "./build/index.js"
